# nursh

./: README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: insight_writer.py  meal_parser.py  recommender.py  state.py
backend/app/api/: deps.py
backend/app/api/routes/: food.py  insights.py  journal.py  parse.py  profile.py  recommend.py
backend/app/data_layer/: food_groups.py  food_search.py  gap_analysis.py  health_rules.py  nutrients.py  pairings.py  recipe_engine.py  transparency.py
backend/app/db/: queries.py  supabase.py
backend/app/db/seed/: citations_data.py  composite_dishes_data.py  food_groups_data.py  indian_foods_data.py  ingest.py  international_ingredients_data.py  us_foods_data.py
backend/app/guardrails/: blocklist.py  fallback.py  validators.py
backend/app/llm/: base.py  claude.py  gemini.py  openai.py  registry.py
backend/app/prompts/: CHANGELOG.md  registry.py
backend/app/prompts/v1/: disambiguate.py  generate_insight.py  generate_recommendation.py  parse_meal.py
backend/app/supabase/migrations/: 001_extensions.sql  002_food_tables.sql  003_user_tables.sql  004_journal_tables.sql  005_materialized_views.sql  006_indexes.sql  007_favorites.sql  008_rpc_functions.sql
backend/evals/: runner.py
backend/evals/datasets/: cultural_accuracy.json  hallucination.json  health_safety.json  parsing_accuracy.json  tone.json
backend/evals/reports/: cultural_accuracy_report.json  hallucination_report.json  health_safety_report.json  parsing_accuracy_report.json  tone_report.json
docs/: EVAL_FRAMEWORK.md  (+2 more)
(+26 files in other folders)
